<resources>
  <string name="app_name" translatable="false">Kitobim</string>
  <string name="sample_text" translatable="false">Sample text</string>
  <string name="filter">Filter</string>
  <string name="list" translatable="false">List</string>
  <string name="grid" translatable="false">Grid</string>
  <string name="all">All</string>
  <string name="downloaded">Downloaded</string>
  <string name="empty_library">Library is empty. You can purchase books from store.</string>
  <string name="library">Library</string>
  <string name="store">Store</string>
  <string name="profile">Profile</string>
  <string name="password">Password</string>
  <string name="email" translatable="false">Email</string>
  <string name="login">Log in</string>
  <string name="forgot_password">Forgot password</string>
  <string name="empty" translatable="false"> </string>
  <string name="skip">Log in later</string>
  <string name="title_login">Log in to Kitobim</string>
  <string name="title_restore_password">Forgot your password?</string>
  <string name="title_register">Welcome to Kitobim</string>
  <string name="create_account">Create account</string>
  <string name="cancel">Cancel</string>
  <string name="username">Username</string>
  <string name="repeat_password">Repeat password</string>
  <string name="link_to_store">Go to store</string>
  <string name="light">Light</string>
  <string name="dark">Dark</string>
  <string name="theme_color">Theme color</string>
  <string name="language">Language</string>
  <string name="help">Help</string>
  <string name="about_us">About us</string>
  <string name="feedback">Feedback</string>
  <string name="notification">Notification</string>
  <string name="payment">Payment</string>
  <string name="my_account">My account</string>
  <string name="logout">Log out</string>
  <string name="settings">Settings</string>
  <string name="turkish" translatable="false">Turkce</string>
  <string name="russian" translatable="false">Русский</string>
  <string name="uzbek" translatable="false">O\'zbekcha</string>
  <string name="english" translatable="false">English</string>
  <string name="error_invalid_email">Invalid email address</string>
  <string name="error_empty_field">Field is empty</string>
  <string name="empty_profile">In order get full access you should log in</string>
  <string name="link_to_login">Let\'s log in</string>
  <string name="subtitle_email_forgot_password">Enter your mail to find your account</string>
  <string name="error_password">At least 6 characters</string>
  <string name="title_welcome">Welcome to Kitobim</string>
  <string name="continue_with_facebook">Continue with Facebook</string>
  <string name="continue_with_google">Continue with Google</string>
  <string name="term_of_use">By tapping Continue and Create Account,
      I agree with Kitobim\'s Term of Service, Payment Term of Service and Privacy Policy</string>
  <string name="description_theme">Color theme changes do not effect your reading experience.
    \n\nTo change the color while reading, select Aa menu in the toolbar from inside author</string>
  <string name="kitobim_logo" translatable="false">kitobim logo</string>
  <string name="date_of_birth">Date of birth</string>
  <string name="location">Location</string>
  <string name="sum">sums</string>
  <string name="free">FREE</string>
  <string name="wishlist">Wishlist</string>
  <string name="share">Share</string>
  <string name="purchase">Purchase</string>
  <string name="genres">Genres</string>
  <string name="authors">Authors</string>
  <string name="publishers">Publishers</string>
  <string name="collections">Collections</string>
  <string name="recommended_books">Recommended books</string>
  <string name="my_wishlist">My wishlist</string>
  <string name="available_books">Available books count:</string>
  <string name="top_free_books">Top free books</string>
  <string name="new_released_books">New released books</string>
  <string name="top_paid_books">Top paid books</string>
  <string name="top_rated_books">Top rated books</string>
  <string name="more">More</string>
  <string name="picks_of_month">Picks of month</string>
  <string name="front_page">Front page</string>
  <string name="you_might_like">You might like</string>
  <string name="search">Search</string>
  <string name="image_description">Image</string>
  <string name="dialog_logout_title">Log out confirmation</string>
  <string name="dialog_loguot_message">Do you want to log out?</string>
  <string name="no_network_connection">No network connection!</string>
  <string name="please_wait">Please, wait</string>
  <string name="phone_number">Phone number</string>
  <string name="kitobim_store">Kitobim Store</string>
  <string name="email_or_phone">Email or phone</string>
  <string name="field_is_empty">Field is empty</string>
  <string name="error_username">At least 3 characters</string>
  <string name="error_email_or_phone">Field is not correct</string>
  <string name="title_confirm_phone">Confirm your phone number</string>
  <string name="code">Code</string>
  <string name="error_phone">Incorrect phone number</string>
  <string name="subtitle_confirm_phone">Confirmation message sent to %1$s</string>
  <string name="title_confirm_email">Account successfully created</string>
  <string name="subtitle_confirm_email">Confirmation message sent to %1$s\n
  Please, confirm your email address and log in</string>
  <string name="hint_phone" translatable="false">123456789</string>
  <string name="subtitle_phone_forgot_password">Enter your phone number to find your account</string>
  <string name="download">Download</string>
  <string name="error_cofirm_code">Code is incorrect</string>
  <string name="no_books">No books</string>
  <string name="books">Books</string>
</resources>
