<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingStart="@dimen/padding_layout_form"
  android:paddingEnd="@dimen/padding_layout_form"
  android:background="?attr/backgroundColor"
  android:focusableInTouchMode="true">


  <TextView
    android:id="@+id/title_login"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="56dp"
    android:fontFamily="sans-serif-light"
    android:text="@string/title_login"
    android:textColor="?attr/textColorPrimary"
    android:textSize="24sp"
    app:layout_constraintBottom_toTopOf="@+id/label_email"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:layout_constraintVertical_chainStyle="packed"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintBottom_toTopOf="@+id/label_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title_login">
    <AutoCompleteTextView
      android:id="@+id/field_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintBottom_toTopOf="@id/btn_forgot_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/label_email"
    app:passwordToggleDrawable="@drawable/asl_password_visibility"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="?attr/iconColorInactive">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/field_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"/>

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/btn_forgot_password"
    style="@style/FlatButton"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="@dimen/margin_micro"
    android:text="@string/forgot_password"
    android:textAllCaps="false"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/label_password"/>

  <Button
    android:id="@+id/btn_login"
    style="@style/PrimaryButton"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginBottom="8dp"
    android:text="@string/login"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <Button
    android:id="@+id/btn_login_later"
    style="@style/FlatButton"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:padding="8dp"
    android:text="@string/skip"
    android:textAllCaps="true"
    app:layout_constraintBottom_toBottomOf="@id/btn_login"
    app:layout_constraintEnd_toStartOf="@id/btn_login"
    app:layout_constraintTop_toTopOf="@id/btn_login"/>


</android.support.constraint.ConstraintLayout>
