<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:mask="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/transparent">

  <TextView
    android:id="@+id/title_phone_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textColor="@color/white"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/btn_go_email"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/btn_go_email"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_phone_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/phone_number"
    app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
    app:layout_constraintStart_toEndOf="@id/guideline_begin_login"
    app:layout_constraintTop_toBottomOf="@+id/btn_go_email">

    <br.com.sapereaude.maskedEditText.MaskedEditText
      android:id="@+id/field_phone_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:inputType="phone"
      android:nextFocusDown="@id/field_password_phone_login"
      android:hint="@string/hint_phone"
      app:allowed_chars="1234567890"
      app:mask="+998 (##) ### ## ##"
      app:keep_hint="true"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_password_phone_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
    app:layout_constraintStart_toEndOf="@id/guideline_begin_login"
    app:layout_constraintTop_toBottomOf="@id/label_phone_login"
    app:passwordToggleDrawable="@drawable/asl_password_visibility"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/icon_inactive_dark">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/field_password_phone_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:imeOptions="actionGo"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"/>
  </android.support.design.widget.TextInputLayout>

  <ImageButton
    android:id="@+id/btn_go_email"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/btn_right_rounded"
    android:contentDescription="@string/image_description"
    android:src="@drawable/ic_email"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>


  <android.support.constraint.Guideline
    android:id="@+id/guideline_begin_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="@dimen/margin_guideline_auth"/>

  <android.support.constraint.Guideline
    android:id="@+id/guideline_end_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="@dimen/margin_guideline_auth"/>

</android.support.constraint.ConstraintLayout>