<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?attr/backgroundColor">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_theme"
    android:layout_width="0dp"
    android:layout_height="@dimen/height_toolbar"
    android:background="@color/transparent"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/theme_color"
    tools:targetApi="lollipop"/>

  <Button
    android:id="@+id/btn_theme_light"
    style="@style/FlatButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_normal"
    android:text="@string/light"
    android:textSize="24sp"
    app:layout_constraintEnd_toStartOf="@id/btn_theme_dark"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar_theme"/>

  <Button
    android:id="@+id/btn_theme_dark"
    style="@style/FlatButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_normal"
    android:text="@string/dark"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@id/btn_theme_light"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@id/btn_theme_light"
    app:layout_constraintTop_toTopOf="@id/btn_theme_light"/>

  <View
    android:layout_width="0dp"
    android:layout_height="@dimen/width_divider"
    android:layout_marginTop="16dp"
    android:background="?attr/dividerColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_theme_light"/>

</android.support.constraint.ConstraintLayout>