<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/layout_parent_forgot_password"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/img_bg_auth"
  android:paddingTop="@dimen/height_status_bar"
  android:fitsSystemWindows="true"
  android:clickable="true"
  android:focusable="true">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_change_password"
    android:layout_width="0dp"
    android:layout_height="@dimen/height_toolbar"
    android:background="@color/transparent"
    app:navigationIcon="@drawable/ic_arrow_white"/>

  <TextView
    android:id="@+id/title_forgot_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="@dimen/margin_micro"
    android:text="@string/title_restore_password"
    android:textColor="@color/text_primary_dark"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar_change_password"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_email_forgot_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toStartOf="@id/guideline_end_password"
    app:layout_constraintStart_toEndOf="@id/guideline_begin_password"
    app:layout_constraintTop_toBottomOf="@id/title_forgot_password"
    app:layout_constraintVertical_chainStyle="spread">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/field_email_forgot_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:imeOptions="actionGo"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_phone_forgot_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/phone_number"
    android:visibility="gone"
    app:layout_constraintEnd_toStartOf="@id/guideline_end_password"
    app:layout_constraintStart_toEndOf="@id/guideline_begin_password"
    app:layout_constraintTop_toBottomOf="@id/title_forgot_password">
    <br.com.sapereaude.maskedEditText.MaskedEditText
      android:id="@+id/field_phone_forgot_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_phone"
      android:imeOptions="actionGo"
      android:inputType="phone"
      app:allowed_chars="1234567890"
      app:keep_hint="true"
      app:mask="+998 (##) ### ## ##"/>
  </android.support.design.widget.TextInputLayout>

  <TextView
    android:id="@+id/subtitle_email_forgot_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_micro"
    android:layout_marginTop="@dimen/margin_micro"
    android:textColor="@color/text_secondary_dark"
    android:textSize="14sp"
    android:text="@string/subtitle_email_forgot_password"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintStart_toStartOf="@+id/guideline_begin_password"
    app:layout_constraintEnd_toEndOf="@id/guideline_end_password"
    app:layout_constraintTop_toBottomOf="@id/label_email_forgot_password"/>

  <TextView
    android:id="@+id/subtitle_phone_forgot_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_micro"
    android:layout_marginStart="@dimen/margin_micro"
    android:text="@string/subtitle_phone_forgot_password"
    android:textColor="@color/text_secondary_dark"
    android:textSize="14sp"
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="@id/guideline_end_password"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintStart_toStartOf="@+id/guideline_begin_password"
    app:layout_constraintTop_toBottomOf="@id/label_phone_forgot_password"/>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_change_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:src="@drawable/ic_chevron_right"
    app:backgroundTint="@color/icon_inactive_dark"
    app:elevation="@dimen/no_elevation"
    app:fabSize="mini"
    app:borderWidth="0dp"
    app:pressedTranslationZ="@dimen/no_elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <android.support.constraint.Guideline
    android:id="@+id/guideline_begin_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="@dimen/margin_guideline_auth"/>

  <android.support.constraint.Guideline
    android:id="@+id/guideline_end_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="@dimen/margin_guideline_auth"/>

</android.support.constraint.ConstraintLayout>