<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/transparent">

  <TextView
    android:id="@+id/title_email_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textColor="@color/white"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/btn_go_phone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/btn_go_phone"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_email_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
    app:layout_constraintStart_toEndOf="@id/guideline_begin_login"
    app:layout_constraintTop_toBottomOf="@+id/btn_go_phone">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/field_email_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:imeOptions="actionNext"
      android:inputType="textEmailAddress"
      android:nextFocusDown="@id/field_password_email_login"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/label_password_email_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toStartOf="@id/guideline_end_login"
    app:layout_constraintStart_toEndOf="@id/guideline_begin_login"
    app:layout_constraintTop_toBottomOf="@id/label_email_login"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/icon_inactive_dark"
    app:passwordToggleDrawable="@drawable/asl_password_visibility">
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/field_password_email_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:selectAllOnFocus="true"
      android:inputType="textPassword"
      android:imeOptions="actionGo"/>
  </android.support.design.widget.TextInputLayout>

  <ImageButton
    android:id="@+id/btn_go_phone"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/btn_left_rounded"
    android:contentDescription="@string/image_description"
    android:src="@drawable/ic_phone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <android.support.constraint.Guideline
    android:id="@+id/guideline_begin_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="@dimen/margin_guideline_auth"/>
  <android.support.constraint.Guideline
    android:id="@+id/guideline_end_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="@dimen/margin_guideline_auth"/>


</android.support.constraint.ConstraintLayout>